--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Here be CSS.FOO
+<!DOCTYPE html>
+<html lang="en-us">
+
+  <head>
+    <title>css.foo</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="D7460N" />
+    <meta name="description" content="Here be css.foo" />
+    <meta name="robots" content="index, archive" />
+    <meta name="theme-color" content="#0d101b" />
+    <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg" />
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+  </head>
+
+  <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
+    <app-container>
+    </app-container>
+    <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
+    <noscript>
+      <style>
+        body {opacity: 1.0;}
+      </style>
+    </noscript>
+  </body>
+
+</html>
