--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
     <app-container>
+      <p>Here be css.foo</p>
     </app-container>
     <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
     <noscript>
