--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 
   <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
     <app-container>
-      <p>Here be css.foo</p>
+      <header>
+      </header>
+      <nav>
+      </nav>
+      <main>
+      </main>
+      <aside>
+      </aside>
+      <aside-2>
+      </aside-2>
+      <footer>
+      </footer>
     </app-container>
     <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
     <noscript>
