--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
       </nav>
       <main>
-        <p>Here be css.foo</p>
+        <h1>Here be css.foo</h1>
       </main>
       <aside>
       </aside>
