--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
       </nav>
       <main>
-        <h1>Here be css.foo</h1>
+        <p style="font-size: 2rem;">Here be css.foo</p>
       </main>
       <aside>
       </aside>
