--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       </nav>
       <main>
         <p style="font-size: 2rem;">Here be css.foo</p>
+        <p>&#160;</p>
+        <p>coming soon</p>
       </main>
       <aside>
       </aside>
