--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <nav>
       </nav>
       <main>
-        <p style="font-size: 2rem;">Here be css.foo</p>
-        <p>&#160;</p>
+        <p style="font-size: 2rem;"><span style="font-family: var(font-family-01);">Here be</span> <span>css.foo</span></p>
         <p>coming soon</p>
       </main>
       <aside>
