--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
       </nav>
       <main>
-        <p style="font-size: 2rem;"><span style="font-family: var(--font-family-01);">Here be</span> <span>css.foo</span></p>
+        <p><span style="font-family: var(--font-family-01); font-size: 1rem;">Here be</span> <span style="font-family: var(--font-family-03); font-size: 2rem;">css.foo</span></p>
         <p>coming soon</p>
       </main>
       <aside>
