--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
       <nav>
       </nav>
       <main>
-        <p><span style="font-family: var(--font-family-01); font-size: 1rem;">Here be</span> <span style="font-family: var(--font-family-03); font-size: 2rem;">css.foo</span></p>
-        <p>coming soon</p>
+        <p style="font-family: var(--font-family-01); font-size: 1rem;">
+          <span>Here</span><br/>
+          <span>be</span><br />
+          <span style="font-family: var(--font-family-03); font-size: 2rem;">css.foo</span><br />
+          <span style="font-family: var(--font-family-03); font-size: 1.5rem;">coming soon</span>
+        </p>
       </main>
       <aside>
       </aside>
