--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="D7460N" />
-  <meta name="description" content="Modern CSS, Intrinic design, Micro-frontend, HTML/CSS template" />
+  <meta name="description" content="Let the CSS renaissance begin!" />
   <meta name="robots" content="index, archive" />
+  <link rel="canonical" href="https://css.foo/" />
   <link rel="shortcut icon" type="image/svg+xml" sizes="any" href="data:image/svg+xml;utf8,<svg 
     xmlns='http://www.w3.org/2000/svg' 
     preserveAspectRatio='xMidYMid meet' 
