--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="D7460N" />
   <meta name="description" content="Let the CSS renaissance begin!" />
   <meta name="robots" content="index, archive" />
+  <meta name="color-scheme" content="dark" />
   <link rel="canonical" href="https://css.foo/" />
   <link rel="shortcut icon" type="image/svg+xml" sizes="any" href="data:image/svg+xml;utf8,<svg 
     xmlns='http://www.w3.org/2000/svg' 
