--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       overflow: hidden;
     }
 
-   iframe {color-scheme: normal;}
+   iframe {color-scheme: light;}
+
+   iframe form div {background-color: transparent;}
 
     h1,
     p {
