--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
    iframe {color-scheme: light;}
 
-   iframe form div {background-color: transparent;}
+   iframe form * {
+    background-color: transparent;
+    color: white;
+   }
 
     h1,
     p {
