--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
    iframe {color-scheme: light;}
 
-   iframe form * {
+   iframe form div div div div {
     background-color: transparent;
     color: white;
    }
