--- a/index.html
+++ b/index.html
@@ -54,10 +54,16 @@
       overflow: hidden;
     }
 
-   iframe {color-scheme: light;}
+   iframe {
+    color-scheme: light;
+    width: 100%;
+   }
 
    iframe form div div div div {
     background-color: transparent;
+   }
+
+   iframe form div[role="heading"] {
     color: white;
    }
 
@@ -214,6 +220,7 @@
     <small><small>Coming soon to a browser near you</small></small>
    <p>
     <small><small>Let me know when!</small></small>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN37weZ5TfYrTEtc8qa8LPytV8LPoPoV3NHQohbg7rhLPzHA/viewform?embedded=true" allowtransparency="true" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN37weZ5TfYrTEtc8qa8LPytV8LPoPoV3NHQohbg7rhLPzHA/viewform?embedded=true" allowtransparency="true" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
    </p>
   </div>
