--- a/index.html
+++ b/index.html
@@ -220,9 +220,8 @@
     <small><small>Coming soon to a browser near you</small></small>
    <p>
     <small><small>Let me know when!</small></small>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN37weZ5TfYrTEtc8qa8LPytV8LPoPoV3NHQohbg7rhLPzHA/viewform?embedded=true" allowtransparency="true" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN37weZ5TfYrTEtc8qa8LPytV8LPoPoV3NHQohbg7rhLPzHA/viewform?embedded=true" allowtransparency="true" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-   </p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN37weZ5TfYrTEtc8qa8LPytV8LPoPoV3NHQohbg7rhLPzHA/viewform?embedded=true" title="Email submit form" allowtransparency="true" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </p>
   </div>
 </body>
 </html>
