--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     width: 100%;
    }
 
-   iframe form div div div div {
-    background-color: transparent;
-   }
+   iframe form > div > div > div > div {
+  background-color: transparent !important;
+}
 
    iframe form div[role="heading"] {
     color: white;
