--- a/index.html
+++ b/index.html
@@ -60,13 +60,17 @@
    }
 
    iframe form > div > div > div > div {
+    background-color: transparent !important;
+  }
+
+   iframe form > div > div > div > div > div {
+    color: white !important;
+  }
+
+   iframe form [role="heading"] {
+  display: none;
   background-color: transparent !important;
 }
-
-   iframe form div[role="heading"] {
-    color: white;
-   }
-
     h1,
     p {
       transition: color 250ms;
