--- a/index.html
+++ b/index.html
@@ -63,14 +63,16 @@
     background-color: transparent !important;
   }
 
-   iframe form > div > div > div > div > div {
-    color: white !important;
+   iframe form > div > div > div > div  > div {
+    display: none !important;
+    background-color: transparent !important;
   }
 
    iframe form [role="heading"] {
-  display: none;
-  background-color: transparent !important;
-}
+     display: none;
+     background-color: transparent !important;
+   }
+  
     h1,
     p {
       transition: color 250ms;
