--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
      display: none;
      background-color: transparent !important;
    }
+
+   iframe form * {
+     background-color: transparent !important;
+     color: #000 !important; /* Set text color to dark */
+   }
+
+   iframe * {
+     background-color: transparent !important;
+     color: #000 !important; /* Set text color to dark */
+   }
   
     h1,
     p {
