--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       overflow: hidden;
     }
 
+   canvas {
+    background-color: transparent;
+   }
+
    iframe {
     color-scheme: canvas;
     width: 100%;
