--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
     <h1>CSS.Foo</h1>
     <p>Let the <span>CSS</span> renaissance begin</p>
     <small><small>Coming soon to a browser near you</small></small>
-   <p>
+   <!--     <p>
     <small><small>Let me know when!</small></small>
-<!--     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN37weZ5TfYrTEtc8qa8LPytV8LPoPoV3NHQohbg7rhLPzHA/viewform?embedded=true" title="Email submit form" allowtransparency="true" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
-    </p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN37weZ5TfYrTEtc8qa8LPytV8LPoPoV3NHQohbg7rhLPzHA/viewform?embedded=true" title="Email submit form" allowtransparency="true" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </p> -->
   </div>
 </body>
 </html>
